<resources>
    <string name="app_name">Beer Rater</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="beer_image_description">An image of the beer</string>
    <string name="bar_image_subtitle_text">An image of a bar</string>
    <string name="empty_bar_title_text">Are you a little thirsty?</string>
    <string name="empty_bar_subtitle_text">Our bar has not yet been stocked, come back later with Internet enabled to discover our ranges!</string>
    <string name="unkown_first_brewed_date">Unknow Date</string>
    <string name="eclamation_points" translatable="false">\??</string>
    <string name="first_brewed_date_des">First Brewed Date</string>
    <string name="abv_des">ABV</string>
    <string name="ph_des">PH</string>
    <string name="volume_des">Volume brewed</string>
    <string name="contributor_des">Integrated by</string>
    <string name="slider_ph_value_description">A slider indicating the PH level of the beer</string>
    <string name="reviews_section">Reviews</string>
    <string name="button_write_review_description">Allows you to add a review for this beer.</string>
    <string name="add_review_text_button">Add a review</string>
    <string name="button_delete_review_description">A element that allows you to delete this review</string>
    <string name="title_text">Title</string>
    <string name="add_a_review_text_title">Add a review</string>
    <string name="rating_bar_review_description">Indicates the level of satisfaction for this beer</string>
    <string name="description_text">Description</string>
    <string name="add_edit_review_cancel_button_description">Cancel the modifications</string>
    <string name="add_edit_review_save_button_description">Save the modifications</string>
    <string name="save_text">Save</string>
    <string name="cancel_text">Cancel</string>
    <string name="gallons_unit">G</string>
    <string name="liter_unit">L</string>
    <string name="no_reviews_text">No reviews yet.</string>
    <string name="unkown_comment_date_posted">Posted a long time ago</string>
    <string name="review_deleted_text">Review deleted</string>
    <string name="undo_text">UNDO</string>
    <string name="review_saved_toast_text">Your modifications have been saved.</string>
    <string name="edit_review_error_message">The title and the comment sections cannot be empty.</string>
    <string name="edit_review_error_dialog_title">Cannot create the review</string>
    <string name="add_a_review_text">Add a review</string>
    <string name="edit_a_review_text">Edit a review</string>
</resources>