<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    android:layout_marginBottom="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/beer_name_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            tools:text="Buzz"
            android:textSize="24sp"
            android:textStyle="bold"
            android:maxLines="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/beer_image_detail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintHeight_percent=".25"
            android:contentDescription="@string/beer_image_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beer_name_detail"
            app:srcCompat="@drawable/ic_beer" />

        <TextView
            android:id="@+id/beer_tagline_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:maxLines="3"
            android:textAlignment="center"
            android:textStyle="italic"
            app:flow_wrapMode="aligned"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beer_image_detail"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed finibus consequat semper." />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_beer_description_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="?attr/colorSurface"
            app:cardCornerRadius="@dimen/cardview_corner_radius_comment"
            app:cardElevation="@dimen/cardview_elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beer_tagline_detail">

            <TextView
                android:id="@+id/beer_description_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/beer_tagline_detail"
                android:justificationMode="inter_word"
                android:maxLines="10"
                android:padding="16dp"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vulputate ex at sollicitudin molestie. Pellentesque ultricies eu dolor id feugiat. Duis faucibus risus at elit faucibus, in suscipit mauris semper. Proin vulputate, augue et laoreet iaculis, lorem dui semper diam, non vulputate diam urna in nisi. Curabitur rhoncus, velit a. "
                tools:targetApi="o" />

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Barrier
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:constraint_referenced_ids="beer_first_brewed_date_detail_des, beer_abv_detail_des, beer_ph_detail_des, beer_volume_detail_des, beer_contributor_detail_des"/>

        <TextView
            android:id="@+id/beer_first_brewed_date_detail_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/first_brewed_date_des"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardview_beer_description_detail" />

        <TextView
            android:id="@+id/beer_abv_detail_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ph_des"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beer_first_brewed_date_detail_des" />

        <TextView
            android:id="@+id/beer_ph_detail_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/abv_des"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beer_abv_detail_des" />

        <TextView
            android:id="@+id/beer_volume_detail_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/volume_des"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beer_ph_detail_des" />

        <TextView
            android:id="@+id/beer_contributor_detail_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/contributor_des"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beer_volume_detail_des" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>