<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="beerListViewModel"
            type="fr.iut.beerrater.presentation.beers_list.BeerListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/colorBackground"
        tools:context=".presentation.beers_list.BeerListActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:spanCount="1" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_empty_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="bar_icon,empty_bar_title,empty_bar_subtitle"
            android:visibility="@{beerListViewModel.groupVisibility ? View.VISIBLE : View.GONE}"/>

        <ImageView
            android:id="@+id/bar_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin_elements_empty_group"
            android:layout_marginRight="@dimen/side_margin_elements_empty_group"
            android:layout_marginBottom="@dimen/space_between_elements_empty_group"
            android:adjustViewBounds="true"
            android:contentDescription="@string/bar_image_subtitle_text"
            android:src="@drawable/ic_bar"
            app:layout_constraintBottom_toTopOf="@+id/empty_bar_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/empty_bar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/empty_bar_title_text"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceMedium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/empty_bar_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_between_elements_empty_group"
            android:fontFamily="sans-serif"
            android:text="@string/empty_bar_subtitle_text"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceSmall"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/empty_bar_title"
            app:layout_constraintWidth_percent="0.8" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>